# langchain-poc

./: .coverage  .env.example  .gitignore  LICENSE  README.md  pyproject.toml  pytest.ini  serverless.yaml
.github/workflows/: python-app.yml
src/api/: main.py
src/api/routes/: chat.py  hello.py
src/cli/: main.py
src/core/: __init__.py  agent.py  hello.py  llama.py
src/core/tools/: curl.py
tests/api/: test_hello.py
tests/cli/: test_hello.py
